@@ -5,6 +5,9 @@ v0.1.4 (XXX)
   - prevents the column widths from growing or shrinking automatically
 - Deprecated Table#table_options in favour of passing options to Table#new
   - Thanks to Zubin Henner for the suggestion
+- Deprecated Table#header_options and Table#headers= in favour of a new method
+  that can be used to specify both the content and options of the header row.
+  - Thanks to Zubin Henner for the suggestion
 
 v0.1.3 (24th July 2008)
 - Require the gem version of cairo
